# k_means_test

./: CMakeLists.txt
inc/: cuMatrix.h
src/: cukmeans.cu  k_means.cc  main.cc
